2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* index.html:
	Adjusted link to GPLv2

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	Create initial site