@@ -81,6 +81,10 @@ pre {
 	float:right;
 }
 
+#deskbar-logo {
+	text-align: center;
+}
+
 .download a {
     text-decoration: none;
     font-weight: bold;
