@@ -44,6 +44,12 @@
 
       <p>Also, please try to test your bug against the latest SVN version,
       first. Your problem may already be fixed!</p>
+    
+    <h2>Contribute</h2>
+      <p>If you want to help improving Deskbar-Applet a good starting point are
+      <a href="http://bugzilla.gnome.org/reports/keyword-search.cgi?product=deskbar-applet&keyword=gnome-love" target="_blank">bugs</a> tagged with
+      <a href="http://live.gnome.org/GnomeLove" target="_blank">gnome-love</a> or the
+      <a href="http://live.gnome.org/DeskbarApplet/RoadMap" target="_blank">Roadmap</a> for the next release.</p>
     </div>
     
     <div id="right">
