@@ -25,7 +25,7 @@
     </div>
 
     <div id="body">
-    	<div align="center">
+    	<div id="deskbar-logo">
         	<img src="./images/deskbar-applet.png" alt="Deskbar-Applet" />
        	</div>
     </div>
@@ -118,7 +118,7 @@
 				<li>Use subprocess module instead of os.popen. Catch OSError when retrieving version (fixes bug #533842)</li>
    	    	</ul>
    	    	<a href="download.html">Download it</a>
-	
+		</div>
    	</div>
     
     <div id="copyright">
