@@ -1,5 +1,12 @@
 2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
+	* getinvolved.html
+	* index.html
+	* default.css:
+	Fixed HTML error and added Contribute section to getinvolved.html 
+
+2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
 	* index.html:
 	Adjusted link to GPLv2
 
